--- a/app/src/views/home/login.ejs
+++ b/app/src/views/home/login.ejs
@@ -4,13 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="/js/home/login.js"></script>
+
+  <!--defer: public/js/home/login.js 에서 const 먼저 적용되고 다음이 적용되도록 설정-->
+  <script src="/js/home/login.js" defer></script>
   <title>Document</title>
 </head>
 <body>
   
-  <input type="text" placeholder="아이디"><br>
-  <input type="text" placeholder="비밀번호"><br> 
+  <input id="id" type="text" placeholder="아이디"><br>
+  <input id="psword" type="text" placeholder="비밀번호"><br> 
   <button>로그인</button>
 
 </body>
